--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,8 +76,17 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: '%mailer_transport%'
-    host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
-    spool: { type: memory }
+  # transport: '%mailer_transport%'
+   encryption: ssl 
+   auth_mode: login
+   host: '%mailer_host%'
+   username: '%mailer_user%'
+   password: '%mailer_password%'
+   spool: { type: memory }
+ 
+    #encryption: ssl
+    #auth_mode:  login
+    #host:       smtp.gmail.com
+    #port: 587
+    #username:   cavalcante02@gmail.com
+#    password:   0o9i8uas
