--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,6 +40,6 @@ security:
             # https://symfony.com/doc/current/security/form_login_setup.html
             #form_login: ~
     encoders:
-        umespa\UserBundle\Entity\User:
+        umespa\UserBundle\Entity\Temp:
             algorithm: bcrypt
             cost: 12
